--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,8 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  spree:
+    email_delivery_mailer:
+      send_license_keys:
+        subject: "License Key Delivery"
+
