Properly localize the e-mail.
Change-Id: Ic4503d46b269ab40f5812a55cce0a53156c3e25f

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,4 +6,4 @@ en:
     email_delivery_mailer:
       send_license_keys:
         subject: "License Key Delivery"
-
+        title: "Here are the license keys for the software you ordered."
