Make electronic emails not require license keys.
Change-Id: I8170489e58b5e93df457175333b26565c1794ea1

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,6 +4,6 @@
 en:
   spree:
     email_delivery_mailer:
-      send_license_keys:
+      electronic_delivery_email:
         subject: "License Key Delivery"
         title: "Here are the license keys for the software you ordered."
