Validate electronic delivery stuff.
Can't have electronic_delivery_keys > 0 and electronic_delivery = false.

Change-Id: I69ae50b18b1ff567892a8284c50e706b974d26d7

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,3 +7,5 @@ en:
       electronic_delivery_email:
         subject: "License Key Delivery"
         title: "Here are the license keys for the software you ordered."
+    variant:
+      electronic_delivery_setting_error: "must be set to TRUE if electronic_delivery_keys is greater than 0."
